# Nexus

./: .env.example  .firebaserc  .gitattributes  .gitignore  .vercelignore  AI_CHANGELOG.md  AI_PROTOCOL.md  AI_SPECIALTIES.md  AI_WORKPLAN.md  ANTIGRAVITY_DEV_SETUP_COMPLETE.md  DLX_MASTER_PLAN.md  DLX_Milestones.md  HERMES_SETUP_PUSH_INSTRUCTIONS.md  HERMES_SETUP_SUMMARY.md  NEXT_SESSION.md  NEXUS_MASTER_PLAN.md  PHASE_PLAN.md  PIECES_MAPPING_AUDIT.md  PIECES_REWRITE_PLAN.md  PIECES_TAG_SCHEMA.md  README.md  SCOPE.md  agents.json  build_log.txt  deploy_log.txt  firebase.json  fix_chat_final.js  fix_chat_final_v2.js  fix_sendMessage.js  fix_sendMessage2.js  fix_sendMessage3.js  hermes-acp-config.json  launch_nexus.bat  launch_nexus_prod.bat  luxrig_params.env  setup_luxrig.bat  setup_tunnel.ps1  test_hermes_setup.sh  update_chat.js  vercel.json
.claude/: settings.local.json
.idx/: dev.nix  integrations.json
app/: .dockerignore  .env.example  .gitignore  .lighthouserc.json  Dockerfile  cloudlogs.json  cloudlogs3.json  cloudlogs4.json  cloudlogs5.json  eslint-output.json  eslint.config.js  eslint_errors.txt  eslint_errors_filtered.txt  eslint_final_check.txt  index.html  nexus.db-shm  nexus.db-wal  package-lock.json  package.json  server.ts  test-gemini.js  test-veo.ts  tsc_errors.txt  tsconfig.app.json  tsconfig.server.json  vite.config.ts
bridge/: .env.example  .gitignore  check_models.js  debug_route.js  jest.config.js  (+10 more)
webapp/src-tauri/: Cargo.toml  build-bridge.ps1  tauri.conf.json
webapp/src-tauri/capabilities/: default.json
webapp/src-tauri/src/: main.rs
(+548 files in other folders)
