[package]
name = "nexus"
version = "2.0.0"
description = "Nexus - Personal AI Command Center"
authors = ["DLX Studios"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-single-instance = "2.4.0"
zip = "8.0.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
